--- a/public/stylesheets/pages/_profile.scss
+++ b/public/stylesheets/pages/_profile.scss
@@ -1,8 +1,8 @@
-#carerArea.v-profile{
-
+.v-profile{
+    height: auto;
     position: relative;
     padding: 0;
-    background-color: $beige-color;
+    background-color: $secondary-color;
 
     .profile-background{
         position: absolute;
@@ -11,7 +11,7 @@
     .subHeader{
         background-color: transparent;
         width: 100%;
-        position: absolute;
+        position: relative;
         height: 56px;
         z-index: 2;
 
@@ -21,10 +21,10 @@
     }
 
     .box-main{
+        padding-top: 30px;
         overflow: visible;
-        margin-top: -30px;
         position: relative;
-        padding-top: 60px;
+        min-height: calc(100vh - #{$headerheight*2});
 
         .profile-subHeader{
             display: flex;
@@ -42,7 +42,7 @@
 
     }
 
-    .profile-heroBanner{
+    .pofile-heroBanner{
         position: relative;
         overflow: visible;
         min-height: 162px;
@@ -52,10 +52,6 @@
             margin: 0;
             height: 140px;
             box-shadow: none;
-
-            button{
-                display: none;
-            }
         }
 
         .profile-avatar{
@@ -74,16 +70,6 @@
                 border: 6px solid #fff;
                 margin-bottom: -3px;
             }
-
-            .btn-modificar{
-                background-color: white;
-                opacity: 1;
-                position: absolute;
-                right: 11px;
-                bottom: -9px;
-                border: 1px solid #ccc;
-                pointer-events: none;
-            }
         }
     }
 
@@ -96,14 +82,6 @@
         .btn{
             margin-top: 16px;
             box-shadow: 0px 0px 14px -4px rgba(0,0,0,0.49);
-        }
-    }
-
-
-    .profile-banner-photo,
-    .profile.avatar {
-        button{
-            display: none;
         }
     }
 
@@ -133,37 +111,6 @@
     .profile-banner-photo{
         width: 100%;
         margin-bottom: 25px;
-    }
-
-    .profile.avatar,
-    .profile-banner{
-        &.loading{
-            overflow: hidden;
-            position: relative;
-
-            &:after{
-                width: 100%;
-                height: 100%;
-                content: "";
-                background-color: rgba(0, 0, 0, 0.5);
-                background-image: url('../../images/Spinner-1s-200px.svg');
-                background-repeat: no-repeat;
-                color: #fff;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                position: absolute;
-                top: 0;
-                left: 0;
-                z-index: 10;
-                transform: none;
-                opacity: 1;
-                font-size: 1.6rem;
-                font-family: rubik;
-                background-size: 35%;
-                background-position: center;
-            }
-        }
     }
 
 }
