--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -1,18 +1,16 @@
 <main class="v-profile">
-    <section class="pofile-heroBanner">
-        <section class="subHeader">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="subHeader_content">
-                            <a id="backLink" href="/service" class="text-dark"><span class="icon-back_arrow"></span></a>
-                            <button id="backSplide"class="d-none"><span class="icon-back_arrow"></span></button>
-                            <h1>Tu Perfil</h1>
-                        </div>
+    <section class="subHeader">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="subHeader_content">
+                        <a id="backLink" href="/service" class="text-dark"><span class="icon-back_arrow"></span></a>
+                        <button id="backSplide"class="d-none"><span class="icon-back_arrow"></span></button>
+                        <h1>Tu Perfil</h1>
                     </div>
                 </div>
             </div>
-        </section>
+        </div>
     </section>
     <div class="box-main">
         <section class="form-row editField disabledField">
@@ -26,5 +24,5 @@
     </div>
 </main>
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-<script src="/javascripts/carer/EditCarerValidator.js"></script>
-<script src="/javascripts/carer/EditCarer.js"></script>
+<script src="/javascripts/EditClientValidator.js"></script>
+<script src="/javascripts/EditClient.js"></script>
