--- a/views/layouts/main-carer.hbs
+++ b/views/layouts/main-carer.hbs
@@ -9,7 +9,7 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"></script>
     <script>
-      var socket = io.connect('http://localhost:3000', { 
+      var socket = io.connect('/', { 
         'forceNew': true 
       });
     </script>
