--- a/views/carer-profile.hbs
+++ b/views/carer-profile.hbs
@@ -1,4 +1,4 @@
-<main id="carerArea" class="v-profile">
+<main class="v-profile">
     <section class="subHeader">
         <div class="container">
             <div class="row">
