--- a/views/carer/profile.hbs
+++ b/views/carer/profile.hbs
@@ -48,7 +48,7 @@
                 </div>
             </div>
         </section>
-        <section class="editField form-row">
+        <section class="editField">
             <div class="editField_label">
                 <label>Descripción</label>
                 <button data-type="editable" data-id="carerDescriptionInput" type="button"><span class="icon-editar"></span></button>
@@ -64,7 +64,7 @@
             <input class="form-control" data-field="editable"  type="email" data-model="User" name="email" id="carerEmailInput" value="{{carer.userId.email}}">
             <button class="btn btn-primary btn-md mt-3" data-btn="modify" data-model="User" data-id="carerEmailInput" type="button">Modificar</button>
         </section>
-        <section class="form-row editField">
+        <section class="editField">
             <form enctype="multipart/form-data" id="photoCarerBannerProfileForm" class="form-group profile-banner-photo">
                 <label class="mt-4 p0">Foto de fondo de perfil</label>
                 <div id="photoCarerBannerProfilePreview" class="profile profile-banner cover" style="background-image: url('{{carer.gallery}}')"></div>
