--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -1,4 +1,4 @@
-<main class="v-profile">
+<main class="v-profile owner">
     <section class="subHeader">
         <div class="container">
             <div class="row">
