--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1369,6 +1369,9 @@ main {
 .v-profile .box-main .profile_wrapperAvatar .avatar {
   margin-bottom: -3px; }
 
+.v-profile.owner .box-main {
+  height: calc(100vh - 112px); }
+
 .btn {
   width: 100%;
   display: inline-flex;
